# elf-bf-tools

./: CMakeLists.txt  LICENSE  README
demo/: CMakeLists.txt  demo.c
elf_bf_compiler/: CMakeLists.txt  README  compile_demo.sh  compile_demo_gdb.sh  elf_bf_compiler.c
elf_bf_debug/: README  debug_rtld_exec-gdb.sh  debug_rtld_exec-rand.sh  debug_rtld_exec.sh  elfbfgdb.py  setup.sh
eresi/: eresi.patch
libelf_bf/: CMakeLists.txt  elf_bf_debug_config.c  elf_bf_debug_config.h  elf_bf_link_map.c  elf_bf_link_map.h  elf_bf_ops.c  elf_bf_ops.h  elf_bf_utils.c  elf_bf_utils.h  elf_reloc_utils.c  elf_reloc_utils.h  elfbfopsbkup  reloc.c  reloc.h  symtab.c  symtab.h
ping_backdoor/: CMakeLists.txt  README  backdoor.sh  build_backdoor.sh  ping_backdoor.c  setuidify.sh  setup.sh
syscall/getchar/: CMakeLists.txt  getchar.c  getchar.sh
syscall/putchar/: CMakeLists.txt  putchar.c  putchar.sh
